--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 TESTING_PORT=3000
 PORT=5000
 NODE_ENV=development
-MONGO_URI=mongodb://localhost:27017/freshkart_test
+MONGO_URI=mongodb://localhost:27017/freshkart
 MONGO_TEST_CONN_URL=mongodb://localhost:27017/freshkart_test
 AUTH_KEY=436990AVoO3UjCn676a4df5P1
 LOGIN_TEMPLATE_ID=676a491fd6fc053fb6550572
