--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - TESTING_PORT=3000
       - PORT=5000
       - NODE_ENV=development
+      - MONGO_URL=mongodb://mongo:27017/mydatabase
       - MONGO_URI=mongodb://mongo:27017/freshkart
       - MONGO_TEST_CONN_URL=mongodb://mongo:27017/freshkart_test
       - AUTH_KEY=436990AVoO3UjCn676a4df5P1
